      Shadura.  (Closes: #518622)

  [ Antonio Terceiro ]
  * debrepro:
    + Don't vary the build path. See
      https://wiki.debian.org/ReproducibleBuilds/History (section "Giving up
      on build paths") for an explanation on why it is not currently feasible
      to vary build paths for reproducible builds.
    + convert mapage to POD

  [ Guillem Jover ]
  * debrepro improvements (Closes: #841149):
    + Simplify and make the vary() function more clear
    + Use dpkg-buildpackage instead of ad-hoc code

  [ Paul Wise ]
  * who-uploads:
    + Fix search for user IDs with gpg2 and no @debian.org user IDs
  * uscan:
    + Fix a mention of the location of the upstream signing key (Closes: #842542)

 -- James McCoy <jamessan@debian.org>  Sat, 01 Oct 2016 13:26:57 -0400

devscripts (2.16.8) unstable; urgency=medium

  [ Paul Wise ]
  * Add some more Debian development & QA tools to Suggests:
    adequate autopkgtest bls-standalone check-all-the-things
    duck how-can-i-help piuparts ratt

  [ Antonio Terceiro ]
  * New script: debrepro, a simple reproducibility tester specific for Debian
    packages.  (Closes: #786755)

  [ James McCoy ]
  * deb-reversion: Update md5sum of changelog if it's changed.  (Closes:
    #836725)
  * Change Getopt::Long configuration to disable gnu_compat so an '=' isn't
    required for optional arguments (e.g. "dch --news=").
  * chdist:
    + Silence warnings about uninitialized values.  Thanks to Christoph Biedl
      for the patch.  (Closes: #838185)
    + For compare-bin-packages, use the newest version of a package if
      multiple versions exist.  Thanks to Christoph Biedl for the patch.
      (Closes: #838184)

 -- James McCoy <jamessan@debian.org>  Fri, 30 Sep 2016 22:17:07 -0400

devscripts (2.16.7) unstable; urgency=medium

  [ Paul Wise ]
  * grep-excuses:
    + Fix the script for the removal of testing.pl from release.debian.org
  * dscverify:
    + Fix bash completion of the --no-conf option
  * uscan: